--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>HEMSI — Beats</title>
-  <meta name="description" content="HEMSI — Beats underground. Licences, exclusifs, custom beats. Noir & blanc minimal." />
+  <title>hemsi — Beats</title>
+  <meta name="description" content="hemsi — beatmaker / producer. Dark underground beats. Licenses, exclusives, custom beats." />
   <meta name="theme-color" content="#000000" />
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -14,8 +14,8 @@
     <div class="brand">
       <div class="logo" aria-hidden="true"></div>
       <div>
-        <div class="name">HEMSI</div>
-        <div class="tag">underground beats — noir & blanc</div>
+        <div class="name">hemsi</div>
+        <div class="tag">Beatmaker / Producer</div>
       </div>
     </div>
 
@@ -29,14 +29,14 @@
 
   <main class="wrap">
     <section class="hero">
-      <h1>Beats sombres, minimal, efficaces.</h1>
+      <h1>Minimal. Dark. Underground.</h1>
       <p>
-        Achète une licence en 2 clics (PayPal) — je t’envoie les fichiers (WAV/MP3/Tracked-out) rapidement.
+        Buy a license in 2 clicks (PayPal) — I’ll email the files fast (MP3/WAV/Tracked-out).
       </p>
 
       <div class="cta">
-        <a class="btn primary" href="#beats">Voir les beats</a>
-        <a class="btn" href="#licensing">Voir les licences</a>
+        <a class="btn primary" href="#beats">Browse beats</a>
+        <a class="btn" href="#licensing">View licenses</a>
       </div>
 
       <div class="divider"></div>
@@ -52,9 +52,9 @@
       <div class="sectionHead">
         <h2>Beats</h2>
         <div class="tools">
-          <input id="search" class="input" placeholder="Rechercher (nom, mood, bpm, key…)" />
+          <input id="search" class="input" placeholder="Search (title, mood, bpm, key…)" />
           <select id="filter" class="select">
-            <option value="all">Tout</option>
+            <option value="all">All</option>
             <option value="dark">Dark</option>
             <option value="jerk">Jerk</option>
             <option value="trap">Trap</option>
@@ -65,14 +65,14 @@
       </div>
 
       <div class="grid" id="beatGrid">
-        <!-- EXEMPLES : remplace avec tes beats -->
-        <article class="card" data-tags="dark jerk 140 a#minor">
+        <article class="card" data-tags="dark jerk trap 130 fminor esdeekid">
           <div class="cardTop">
             <div>
-              <div class="beatTitle">PHANTOM LOOP</div>
-              <div class="meta">140 BPM • A# minor • dark / jerk</div>
+              <div class="beatTitle">EsDeeKid Type Beat "OMENS"</div>
+              <div class="meta">130 BPM • F minor • dark / jerk / trap</div>
             </div>
-            <a class="link" href="https://www.youtube.com/watch?v=XXXX" target="_blank" rel="noreferrer">écouter</a>
+            <!-- Mets ici le lien EXACT de la vidéo YouTube du beat quand tu l'auras -->
+            <a class="link" href="https://www.youtube.com/@hemsi06" target="_blank" rel="noreferrer">listen</a>
           </div>
 
           <div class="buyRow">
@@ -81,38 +81,20 @@
             <a class="btn small" href="#" data-buy="unlimited">Unlimited</a>
             <a class="btn small ghost" href="#contact">Exclusive (offer)</a>
           </div>
-          <div class="hint">Après paiement, je t’envoie le pack par mail (Drive privé).</div>
-        </article>
-
-        <article class="card" data-tags="dark trap 150 fminor">
-          <div class="cardTop">
-            <div>
-              <div class="beatTitle">NO SIGNAL</div>
-              <div class="meta">150 BPM • F minor • dark / trap</div>
-            </div>
-            <a class="link" href="https://www.youtube.com/watch?v=YYYY" target="_blank" rel="noreferrer">écouter</a>
-          </div>
-
-          <div class="buyRow">
-            <a class="btn small" href="#" data-buy="basic">Basic</a>
-            <a class="btn small" href="#" data-buy="wav">WAV</a>
-            <a class="btn small" href="#" data-buy="unlimited">Unlimited</a>
-            <a class="btn small ghost" href="#contact">Exclusive (offer)</a>
-          </div>
-          <div class="hint">Après paiement, je t’envoie le pack par mail (Drive privé).</div>
+          <div class="hint">After payment, I’ll email your pack (private Drive link).</div>
         </article>
       </div>
 
       <div class="note">
         <span class="dot"></span>
-        Astuce: remplace les liens “écouter” par tes vidéos YouTube (type beat). Tu peux ajouter autant de cards que tu veux.
+        Add more beats by duplicating the card block and changing title/BPM/key/tags + YouTube link.
       </div>
     </section>
 
     <section id="licensing" class="section">
       <div class="sectionHead">
         <h2>Licensing</h2>
-        <div class="sub">Simple, clair, noir & blanc.</div>
+        <div class="sub">Simple. Clear. Black & white.</div>
       </div>
 
       <div class="pricing">
@@ -121,8 +103,8 @@
           <div class="price">25€</div>
           <ul>
             <li>MP3</li>
-            <li>Usage commercial</li>
-            <li>Crédit “Prod. HEMSI”</li>
+            <li>Commercial use</li>
+            <li>Credit “Prod. hemsi”</li>
           </ul>
         </div>
 
@@ -131,8 +113,8 @@
           <div class="price">40€</div>
           <ul>
             <li>WAV + MP3</li>
-            <li>Meilleure qualité</li>
-            <li>Crédit “Prod. HEMSI”</li>
+            <li>High quality</li>
+            <li>Credit “Prod. hemsi”</li>
           </ul>
         </div>
 
@@ -142,7 +124,7 @@
           <ul>
             <li>WAV + MP3</li>
             <li>Tracked-out (stems)</li>
-            <li>Usage illimité</li>
+            <li>Unlimited usage</li>
           </ul>
         </div>
 
@@ -150,63 +132,57 @@
           <div class="priceTitle">Exclusive</div>
           <div class="price">Offer</div>
           <ul>
-            <li>Beat retiré du store</li>
-            <li>Prix selon demande</li>
-            <li>Contact direct</li>
+            <li>Beat removed from the store</li>
+            <li>Price depends on the deal</li>
+            <li>Direct contact</li>
           </ul>
         </div>
-      </div>
-
-      <div class="note">
-        <span class="dot"></span>
-        Tu peux modifier les prix/conditions comme tu veux.
       </div>
     </section>
 
     <section id="custom" class="section">
       <div class="sectionHead">
         <h2>Custom beats</h2>
-        <div class="sub">Tu veux un beat sur mesure ?</div>
+        <div class="sub">Need a custom beat?</div>
       </div>
 
       <div class="customBox">
         <p>
-          Envoie-moi : référence(s), BPM, vibe, deadline, budget.  
-          Je réponds rapidement.
+          Send references, BPM, vibe, deadline + budget — I reply fast.
         </p>
-        <a class="btn primary" href="#contact">Me contacter</a>
+        <a class="btn primary" href="#contact">Contact me</a>
       </div>
     </section>
 
     <section id="contact" class="section">
       <div class="sectionHead">
         <h2>Contact</h2>
-        <div class="sub">Le plus simple : email / IG.</div>
+        <div class="sub">Fastest: email / IG.</div>
       </div>
 
       <div class="contactGrid">
         <div class="contactCard">
           <div class="label">Email</div>
-          <a id="emailShow" class="bigLink" href="#">hemsi@…</a>
-          <div class="small">Clique pour ouvrir ton client mail.</div>
+          <a id="emailShow" class="bigLink" href="#">hemsi.contact@gmail.com</a>
+          <div class="small">Click to open your email app.</div>
         </div>
 
         <div class="contactCard">
           <div class="label">Instagram</div>
-          <a id="igShow" class="bigLink" href="#" target="_blank" rel="noreferrer">@hemsi</a>
-          <div class="small">DM pour exclusifs / customs.</div>
+          <a id="igShow" class="bigLink" href="#" target="_blank" rel="noreferrer">@hemsi06</a>
+          <div class="small">DM for exclusives / customs.</div>
         </div>
 
         <div class="contactCard">
-          <div class="label">Paiement</div>
-          <a id="paypalShow" class="bigLink" href="#" target="_blank" rel="noreferrer">PayPal</a>
-          <div class="small">Paiement → je t’envoie le pack.</div>
+          <div class="label">Payment</div>
+          <a id="paypalShow" class="bigLink" href="#" target="_blank" rel="noreferrer">paypal.me</a>
+          <div class="small">Payment → I send the pack.</div>
         </div>
       </div>
     </section>
 
     <footer class="wrap footer">
-      <div>© <span id="year"></span> HEMSI</div>
+      <div>© <span id="year"></span> hemsi</div>
       <div class="footLinks">
         <a href="#beats">Beats</a>
         <a href="#licensing">Licensing</a>
