--- a/index.html
+++ b/index.html
@@ -28,25 +28,35 @@
   </header>
 
   <main class="wrap">
-    <section class="hero">
-      <h1>Minimal. Dark. Underground.</h1>
-      <p>
-        Buy a license in 2 clicks (PayPal) — I’ll email the files fast (MP3/WAV/Tracked-out).
-      </p>
+   <section class="hero">
+  <div class="heroCard">
+    <h1>Minimal. Dark. Underground.</h1>
+    <p>
+      Buy a license in 2 clicks (PayPal) — I’ll email the files fast (MP3/WAV/Tracked-out).
+    </p>
 
-      <div class="cta">
-        <a class="btn primary" href="#beats">Browse beats</a>
-        <a class="btn" href="#licensing">View licenses</a>
-      </div>
+    <div class="cta">
+      <a class="btn primary" href="#beats">Browse beats</a>
+      <a class="btn" href="#licensing">View licenses</a>
+      <a class="btn ghost" href="#contact">Custom / Exclusive</a>
+    </div>
 
-      <div class="divider"></div>
+    <div class="badges">
+      <span class="badge"><strong>Delivery:</strong> fast</span>
+      <span class="badge"><strong>Formats:</strong> MP3 / WAV / Stems</span>
+      <span class="badge"><strong>Style:</strong> dark / jerk / trap</span>
+    </div>
 
-      <div class="quick">
-        <a class="pill" id="ytLink" href="#" target="_blank" rel="noreferrer">YouTube</a>
-        <a class="pill" id="igLink" href="#" target="_blank" rel="noreferrer">Instagram</a>
-        <a class="pill" id="mailLink" href="#">Email</a>
-      </div>
-    </section>
+    <div class="divider"></div>
+
+    <div class="quick">
+      <a class="pill" id="ytLink" href="#" target="_blank" rel="noreferrer">YouTube</a>
+      <a class="pill" id="igLink" href="#" target="_blank" rel="noreferrer">Instagram</a>
+      <a class="pill" id="mailLink" href="#">Email</a>
+    </div>
+  </div>
+</section>
+
 
     <section id="beats" class="section">
       <div class="sectionHead">
@@ -194,4 +204,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
